--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -60,7 +60,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color:rgb(255,215,200); 
 }
 
 [tabindex="-1"]:focus {
