criação da pagina de add novo post e edição da parte sobre do blog

--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -22,3 +22,15 @@ img{
 .wrap-content{
     margin-bottom: 70px;
 }
+
+#h4-aside{
+display: inline;
+}
+
+i{
+right: 0px;
+}
+
+#a-edit-icon{
+  color: black;
+}
