--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -44,26 +44,30 @@ right: 0px;
 }
 .profile-img{
     text-align: center;
+    height: 150px;
 }
 .profile-img img{
-    width: 70%;
+    max-width: 50%;
     height: 100%;
+    z-index: 1;
 }
 .profile-img .file {
     position: relative;
     overflow: hidden;
     margin-top: -20%;
-    width: 70%;
+    width: 50%;
     border: none;
     border-radius: 0;
     font-size: 15px;
     background: #212529b8;
+    z-index: 2;
 }
 .profile-img .file input {
     position: absolute;
     opacity: 0;
-    right: 0;
+    right: -160px;
     top: 0;
+    z-index: 3;
 }
 .profile-head h5{
     color: #333;
